<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/activity_0"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:background="@drawable/ic_close"
        android:padding="20dp" />
    <FrameLayout
        android:id="@+id/logon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="11"
        android:paddingHorizontal="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logon"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="bottom"
            android:lineSpacingExtra="10dp"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingHorizontal="5dp"

        >
        <TextView
            android:id="@+id/send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/send_code"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:lineSpacingExtra="6dp"
            />
    </FrameLayout>
    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:typeface="monospace"
        mask:allowed_chars="1234567890"
        mask:mask="+7(###)###-##-##"
        android:textColor="@color/light_gray"
        android:hint="@string/number_hint"
        mask:keep_hint="true"
        android:layout_weight="2"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_code"
            android:background="@color/black"
            android:textColor="@color/white"
            android:onClick="changeActivityFirst"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="13"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/conditions"
            android:textColorLink="@color/vomit_yellow"
            android:textColor="@color/gray"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlCompat" />
    </FrameLayout>
</LinearLayout>