<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity4">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/BankStyle">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_worker"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/BankStyle">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/bank_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/bank_theme"
                    android:padding="10dp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_round_arrow_back_30" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/bank_back"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/worker_title"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/bank_send"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/bank_theme"
                    android:padding="10dp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_round_send_30"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textColor="@color/bank_theme"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name_surname"
            android:textColorHint="@color/bank_hint"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"
            android:backgroundTint="@color/bank_hint"
            android:textCursorDrawable="@null"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/bank_hint"
            />
        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="phone"
            android:typeface="monospace"
            app:allowed_chars="1234567890"
            app:mask="+7(###)###-##-##"
            android:textColor="@color/light_gray"
            android:hint="@string/number_hint"
            app:keep_hint="true"
            android:layout_weight="2"
            android:backgroundTint="@color/bank_hint"
            android:textCursorDrawable="@null"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_email"
            android:textColor="@color/bank_hint"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/bank_hint"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"
            android:backgroundTint="@color/bank_hint"
            android:textCursorDrawable="@null"
            />
        <Spinner
            android:paddingTop="50dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:entries="@array/themes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/bank_hint"
            android:textColorHighlight="@color/black"
            android:textColor="@color/bank_hint"
            android:backgroundTint="@color/bank_hint"
            />
        <EditText
            android:paddingTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/Comment"
            android:textColorHint="@color/bank_hint"
            android:textColorHighlight="@color/black"
            android:textColor="@color/bank_hint"
            android:backgroundTint="@color/bank_hint"
            android:textCursorDrawable="@null"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
        <TextView
            android:textColorLink="@color/bank_variant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>