<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:background="@color/worker_theme"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/WorkerStyle">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_worker"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/WorkerStyle">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/menu_todoist"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_round_arrow_back_30"
                    android:layout_alignParentStart="true"
                    android:background="@color/worker_theme"
                    android:padding="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/worker_title"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_toEndOf="@id/menu_todoist"
                    android:padding="15dp"
                    android:textSize="20sp"
                    />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="3"
        >
        <FrameLayout
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"/>
        </FrameLayout>
        <TextView
            android:layout_below="@id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:padding="5dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/exit_button"
                android:layout_width="48dp"
                android:layout_gravity="center"
                android:layout_height="48dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:backgroundTint="@color/worker_secondary"
                app:icon="@drawable/ic_round_exit_to_app_30"
                app:iconSize="24dp"
                app:iconPadding="0dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:iconGravity="start"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
                android:layout_centerHorizontal="true"
                android:onClick="changeActivityFirst"
                />
            <TextView
                android:layout_below="@id/exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/worker_secondary"
                android:text="Выйти из \n приложения"
                android:lines="2"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="RtlSymmetry">
        <com.google.android.material.button.MaterialButton
            android:layout_width="48dp"
            android:layout_gravity="center"
            android:layout_height="48dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:backgroundTint="@color/worker_variant"
            app:iconTint="@color/worker_secondary"
            app:icon="@drawable/ic_round_phone_24"
            app:iconSize="24dp"
            app:iconPadding="0dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconGravity="start"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            />
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="@color/white"
            android:paddingStart="25dp"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="RtlSymmetry">
        <com.google.android.material.button.MaterialButton
            android:layout_width="48dp"
            android:layout_gravity="center"
            android:layout_height="48dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:backgroundTint="@color/worker_variant"
            app:iconTint="@color/worker_secondary"
            app:icon="@drawable/ic_round_email_24"
            app:iconSize="24dp"
            app:iconPadding="0dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconGravity="start"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            />
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mails"
            android:textColor="@color/white"
            android:paddingStart="25dp"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="RtlSymmetry">
        <com.google.android.material.button.MaterialButton
            android:layout_width="48dp"
            android:layout_gravity="center"
            android:layout_height="48dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:backgroundTint="@color/worker_variant"
            app:iconTint="@color/worker_secondary"
            app:icon="@drawable/ic_baseline_description_24"
            app:iconSize="24dp"
            app:iconPadding="0dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconGravity="start"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            />
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worker_data"
            android:textColor="@color/white"
            android:paddingStart="25dp"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="RtlSymmetry">
        <com.google.android.material.button.MaterialButton
            android:layout_width="48dp"
            android:layout_gravity="center"
            android:layout_height="48dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:backgroundTint="@color/worker_variant"
            app:iconTint="@color/worker_secondary"
            app:icon="@drawable/ic_ruble"
            app:iconSize="24dp"
            app:iconPadding="0dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconGravity="start"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            />
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region_payment"
            android:textColor="@color/white"
            android:paddingStart="25dp"
            android:textSize="18sp"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        />
</androidx.appcompat.widget.LinearLayoutCompat>