<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Mobile_Lab_1.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Mobile_Lab_1.NoActionBar.PopupOverlay">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/menu_todoist"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_baseline_menu_30"
                    android:tint="@color/white"
                    android:layout_alignParentStart="true"
                    android:background="@color/todoist_theme"
                    android:padding="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/title_activity_main2"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_toEndOf="@id/menu_todoist"
                    android:padding="15dp"
                    android:textSize="20dp"
                    />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/more_vert_todoist"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_baseline_more_vert_30"
                    android:tint="@color/white"
                    android:layout_alignParentEnd="true"
                    android:background="@color/todoist_theme"
                    android:padding="10dp"
                    />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/chat_todoist"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_round_chat_bubble_outline_30"
                    android:tint="@color/white"
                    android:background="@color/todoist_theme"
                    android:padding="10dp"
                    android:layout_toStartOf="@id/more_vert_todoist"
                    />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/search_todoist"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_round_search_30"
                    android:tint="@color/white"
                    android:background="@color/todoist_theme"
                    android:layout_toStartOf="@id/chat_todoist"
                    android:padding="10dp"
                    />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBoxColor_0"
                    android:layout_width="wrap_content"
                    android:button="@drawable/custom_checkbox"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_0"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBoxColor_1"
                    android:layout_width="wrap_content"
                    android:button="@drawable/custom_checkbox"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_1"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBoxColor_2"
                    android:layout_width="wrap_content"
                    android:button="@drawable/custom_checkbox"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_2"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_baseline_add_30"
        app:tint="@color/white"
        android:backgroundTint="@color/todoist_theme"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>